--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.12.2",
+    "celebrate": "^13.0.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
